@@ -1,3 +1,8 @@
+2013-06-12: David Wetzel <dave@turbocat.de>
+	* GSWAdaptors/Apache2/mod_gsw.c
+	  use strncasecmp to be more tolerant with header case
+	  update x-webobjects-adaptor-version (old WO uses lowercase, I think) 
+
 2013-06-11: David Wetzel <dave@turbocat.de>
 	* GSWAdaptors/Apache2/mod_gsw.c
 	  print 'never' and not the epoch time if there was never a response
